fixed flickering issue on modal

--- a/modals.css
+++ b/modals.css
@@ -3,15 +3,15 @@
     text-align: left;
     position: fixed;
     z-index: 10000;
-    top: 2em;
-    bottom: 2em;
-    left: 2em;
-    right: 2em;
+    top: 5rem;
+    bottom: 4.5rem;
+    left: 3rem;
+    right: 3rem;
     background-color: var(--text-clr);
     color: #000;
     overflow-y: scroll;
     overflow-x: hidden;
-    box-shadow: 0 0 0 3em rgba(0, 0, 0, 0.85);
+    box-shadow: 0 0 0 6rem rgba(0, 0, 0, 0.85);
 }
 
 .modal .section__title{
@@ -66,14 +66,15 @@
 
 .modal-close{
     position: fixed;
-    top: .8em;
-    left: .5em;
+    top: 4rem;
+    left: 2rem;
     background-color: var(--accent-clr);
     border: none;
     width: 30px; 
     height: 30px;
     padding: 8px;
     border-radius: 50%;
+    z-index: 20000;
 }
 
 .full-width{
